Update register.tsx so that after user clicks on submit all the information is uploaded on databse with user image. update firebase config for utilizing FB project, (MUST TO DO: FIX THE LOADING SCREEN THE SPINNING CIRCLE IS NOT SHOWING)

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -61,6 +61,7 @@ body {
 }
 
 #spinning-circle {
+  background-color: $tertiary;
   width: 200px;
   height: 200px;
   border: 80px dashed lightblue;
